--- a/JedenSvet/src/jedensvet/GUI.form
+++ b/JedenSvet/src/jedensvet/GUI.form
@@ -356,6 +356,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Vyhledat v DB"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="selectFilmButtonMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="vyhledaniFilmuResponse">
     </Component>
